<resources>
    <string name="app_name">Easy Recipe</string>
    <string name="TvTitle">Strawberry Sorbet</string>
    <string name="description">Strawberry Sorbet Recipe</string>
    <string name="btRecipe">View Recipe</string>
    <string name="tvItem1">6 cups chopped strawberry</string>
    <string name="tvItem2">1 T. lemon juice</string>
    <string name="tvItem3">1 cup sugar</string>
    <string name="tvItem4">1/4 cup cold water</string>
    <string name="tvDirections">Directions</string>
    <string name="tvMix">Process until smooth in the blender. Freezer for 3 hours in a covered container</string>
    <string name="tvIngredients">Ingredients</string>
</resources>